--- a/src/style.css
+++ b/src/style.css
@@ -21,13 +21,14 @@ a {
 a:hover {
   color: #535bf2;
 }
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -36,10 +37,10 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .logo {
@@ -93,4 +94,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#canvas {
+  width: 100%;
+  height: 100%;
 }
