--- a/src/style.css
+++ b/src/style.css
@@ -81,3 +81,14 @@ h1 {
   width: 100%;
   height: 100%;
 }
+
+button:hover {
+  box-shadow: none;
+}
+
+/* 点击时的动画效果，通常让按钮稍微缩小，模拟按下效果 */
+button:active {
+  transition: all 0.1s ease-in-out;
+  transform: scale(0.95);
+  box-shadow: none;
+}
