--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,8 @@ h1 {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  padding: 1.5rem;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -80,6 +82,7 @@ h1 {
 #canvas {
   width: 100%;
   height: 100%;
+  border-radius: 0.1rem;
 }
 
 button:hover {
